--- a/nginx.conf
+++ b/nginx.conf
@@ -12,40 +12,18 @@ http {
       index index.html;
     }
   }
-  upstream secure {
-    server secure3a;
-    server secure3b;
-    server secure3c;
-  }
   server {
     listen 80;
-    server_name ~^secure3;
+    server_name ~^blog;
     location / {
-      proxy_pass http://secure/;
-    }
-    location /appui/ {
-      proxy_pass http://appui/;
-    }
-    location /office/ {
-      proxy_pass http://office/;
+      proxy_pass http://blog/;
     }
   }
   server {
     listen 80;
-    server_name ~^tracking;
+    server_name ~^cv;
     location / {
-      proxy_pass http://tracking/;
-    }
-  }
-  server {
-    listen 80;
-    server_name ~^secret;
-    location / {
-      proxy_pass http://secret/;
-      auth_basic "secret";
-      auth_basic_user_file /etc/htpasswd;
-     
+      proxy_pass http://cv:1337/;
     }
   }
 }
-daemon off;
