--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
     listen 80;
     server_name ~^blog;
     location / {
-      proxy_pass http://blog:1313/;
+      proxy_pass http://blog/;
     }
   }
   server {
