Add www container and to nginx conf

--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -5,7 +5,9 @@ aiguillage:
   links:
     - 'hugo.blog:blog'
     - 'wopr.cv:cv'
+    - 'www'
   ports:
     - '80:80'
   tags:
     - nodecluster-name=soulshake-production
+
