--- a/nginx.conf
+++ b/nginx.conf
@@ -26,4 +26,11 @@ http {
       proxy_pass http://cv:1337/;
     }
   }
+  server {
+    listen 80;
+    server_name ~^www;
+    location / {
+      proxy_pass http://www/;
+    }
+  }
 }
