--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
 aiguillage:
-  #image: 'soulshake/aiguillage:latest'
-  build: .
-  #autoredeploy: true
-  #deployment_strategy: high_availability
+  image: 'soulshake/aiguillage:latest'
+  #build: .
   external_links:
     - 'hugo.blog:blog'
     - 'wopr.cv:cv'
   ports:
     - '80:80'
-  #tags:
-  #  - nodecluster-name=soulshake-production
