remove 1337 from cv port

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ http {
     server {
         listen 80;
         location / {
-            index index.html;
+            proxy_pass http://www/;
         }
     }
     server {
@@ -23,7 +23,7 @@ http {
         listen 80;
         server_name ~^cv;
         location / {
-            proxy_pass http://cv:1337/;
+            proxy_pass http://cv/;
         }
     }
     server {
