--- a/nginx.conf
+++ b/nginx.conf
@@ -3,34 +3,33 @@ events {
     worker_connections  1024;
 }
 http {
-    keepalive_timeout  65;
-    # this is the first section, so it will be the default
-    # (if no other one is matched)
     server {
-        listen 80;
+        listen 80 default_server;
+        # this is how nikolay makes comments:
+        server_name it_doesnt_matter_what_i_type_here_isnt_nginx_awesome_just_taking_more_cpu_cycles_by_processing_this_longer_string_ha_ha_ha_thanks_nikolay;
         location / {
-            proxy_pass http://www/;
+            proxy_pass http://www;
         }
     }
     server {
         listen 80;
         server_name ~^blog;
         location / {
-            proxy_pass http://blog/;
+            proxy_pass http://blog;
         }
     }
     server {
         listen 80;
         server_name ~^cv;
         location / {
-            proxy_pass http://cv/;
+            proxy_pass http://cv;
         }
     }
     server {
         listen 80;
         server_name ~^www;
         location / {
-            proxy_pass http://www/;
+            proxy_pass http://www;
         }
     }
 }
