ok so there is apparently a limit on server_name after all

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ http {
     server {
         listen 80 default_server;
         # this is how nikolay makes comments:
-        server_name it_doesnt_matter_what_i_type_here_isnt_nginx_awesome_just_taking_more_cpu_cycles_by_processing_this_longer_string_ha_ha_ha_thanks_nikolay;
+        server_name anything_can_go_here;
         location / {
             proxy_pass http://www;
         }
