--- a/nginx.conf
+++ b/nginx.conf
@@ -13,23 +13,30 @@ http {
     }
     server {
         listen 80;
-        server_name ~^blog;
+        server_name ~^blog.soulshake.net;
         location / {
             proxy_pass http://blog;
         }
     }
     server {
         listen 80;
-        server_name ~^cv;
+        server_name ~^cv.soulshake.net;
         location / {
             proxy_pass http://cv;
         }
     }
     server {
         listen 80;
-        server_name ~^www;
+        server_name ~^www.soulshake.net;
         location / {
             proxy_pass http://www;
+        }
+    }
+    server {
+        listen 80;
+        server_name ~tillr;
+        location / {
+            proxy_pass http://web;
         }
     }
 }
