--- a/nginx.conf
+++ b/nginx.conf
@@ -36,7 +36,7 @@ http {
         listen 80;
         server_name ~tillr;
         location / {
-            proxy_pass http://web:3000;
+            proxy_pass https://web:3000;
         }
     }
 }
