--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,7 @@ http {
     }
     server {
         listen 80;
+        listen 443;
         server_name ~tillr;
         location / {
             proxy_pass https://web:3000;
